--- a/design/index.html
+++ b/design/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf8"/>
     <title>Välkommen till Värmdö - designtest</title>
     <style>
+        @import url('https://fonts.googleapis.com/css?family=Open+Sans');
         /*
          purple: #463CA0
          grey:   #EDEDED
@@ -11,7 +12,7 @@
 
         body {
             z-index: 0;
-            font-family: Arial;
+            font-family: Arial, sans-serif;
             margin: 0;
             opacity: 1;
             line-height: 1.4em;
@@ -21,6 +22,7 @@
         }
 
         h1, h2, h3 {
+            font-family: "Open Sans", Arial, sans-serif;
             font-weight: bold;
         }
 
