Fixed the logotypes by embedding the svg inline

--- a/design/index.html
+++ b/design/index.html
@@ -5,6 +5,7 @@
     <title>Välkommen till Värmdö - designtest</title>
     <style>
         @import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
         /*
          purple: #463CA0
          grey:   #EDEDED
@@ -40,8 +41,8 @@
         }
 
         p a:hover {
-             text-decoration: none;
-         }
+            text-decoration: none;
+        }
 
         a {
             color: inherit;
@@ -50,9 +51,9 @@
         }
 
         a:hover {
-             text-decoration: underline;
-             border-bottom: 1px transparent !important;
-         }
+            text-decoration: underline;
+            border-bottom: 1px transparent !important;
+        }
 
         .header--logo-wrapper {
             width: 100%;
@@ -116,7 +117,7 @@
         }
 
         main {
-            width: calc( 100% - 100px );
+            width: calc(100% - 100px);
             margin: 50px;
         }
 
@@ -180,7 +181,42 @@
 <body>
 <header class="header">
     <div class="header--logo-wrapper">
-        <img class="header--logo" alt="Välkommen till Värmdö - logotyp" src="./img/VTVlogo_vertical_grey.svg"/>
+        <svg class="header--logo" data-name="Lager 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576.51 219.66">
+            <defs>
+                <style>.g-cls-1{fill:#463ca0;}.g-cls-2,.g-cls-3{fill:#ededed;}.g-cls-3{font-size:57.07px;font-family:OpenSans-Bold, "Open Sans";font-weight:700;}.g-cls-4{letter-spacing:-0.03em;}.g-cls-5{letter-spacing:-0.02em;}.g-cls-6{letter-spacing:-0.02em;}.g-cls-7{letter-spacing:-0.04em;}.g-cls-8{letter-spacing:-0.02em;}.g-cls-9{letter-spacing:-0.02em;}.g-cls-10{letter-spacing:-0.02em;}.g-cls-11{letter-spacing:-0.01em;}.g-cls-12{letter-spacing:-0.02em;}.g-cls-13{letter-spacing:-0.02em;}.g-cls-14{letter-spacing:-0.02em;}.g-cls-15{letter-spacing:-0.14em;}.g-cls-16{letter-spacing:-0.02em;}.g-cls-17{letter-spacing:-0.02em;}.g-cls-18{letter-spacing:-0.01em;}.g-cls-19{letter-spacing:-0.02em;}
+                </style>
+            </defs>
+            <title>VTVlogo_vertical_grey</title>
+            <rect class="g-cls-1" width="576.51" height="219.66"/>
+            <path class="g-cls-2"
+                  d="M507.54,462.57h-.12a14.35,14.35,0,0,1-10.18-4.2h0c-3.37-3.36-40.6-43.18-49.33-53.77a9.45,9.45,0,0,1,14.59-12c7.22,8.76,35.51,39.13,45,49.17,9.49-10,37.77-40.41,45-49.17a9.45,9.45,0,0,1,14.59,12c-8.74,10.6-46,50.41-49.33,53.77h0A14.35,14.35,0,0,1,507.54,462.57Zm-.64,0h0Zm0,0h0Z"
+                  transform="translate(-394.74 -274.17)"/>
+            <path class="g-cls-2"
+                  d="M572.62,379.61a9.46,9.46,0,0,1-9.14-11.89,33.58,33.58,0,0,0-1.72-22.63A28.92,28.92,0,0,0,549,331.66c-11.52-6-26.36-4.76-35.29,3a9.43,9.43,0,0,1-6.2,2.31h-.08a9.43,9.43,0,0,1-6.2-2.31c-8.93-7.75-23.77-9-35.3-3A28.92,28.92,0,0,0,453.2,345.1a33.58,33.58,0,0,0-1.72,22.63,9.45,9.45,0,1,1-18.27,4.86A52.3,52.3,0,0,1,436,337.32,48.18,48.18,0,0,1,457.2,314.9c16-8.38,35.7-7.76,50.29,1,14.58-8.77,34.24-9.38,50.28-1A48.19,48.19,0,0,1,579,337.32a52.3,52.3,0,0,1,2.76,35.27A9.46,9.46,0,0,1,572.62,379.61ZM514,334.37l0,0Zm0,0h0Zm0,0h0Z"
+                  transform="translate(-394.74 -274.17)"/>
+            <text class="g-cls-3" transform="translate(227.5 100.45) scale(0.88 1)">
+                <tspan class="g-cls-4">V</tspan>
+                <tspan class="g-cls-5" x="35.19" y="0">ä</tspan>
+                <tspan class="g-cls-6" x="68.56" y="0">l</tspan>
+                <tspan class="g-cls-7" x="84.82" y="0">k</tspan>
+                <tspan class="g-cls-8" x="118.1" y="0">o</tspan>
+                <tspan class="g-cls-9" x="152.53" y="0">m</tspan>
+                <tspan class="g-cls-10" x="207.49" y="0">m</tspan>
+                <tspan class="g-cls-11" x="262.65" y="0">e</tspan>
+                <tspan x="295.77" y="0">n</tspan>
+                <tspan class="g-cls-12" x="0" y="57.07">t</tspan>
+                <tspan class="g-cls-13" x="23.76" y="57.07">i</tspan>
+                <tspan class="g-cls-14" x="40.05" y="57.07">l</tspan>
+                <tspan x="56.32" y="57.07">l</tspan>
+                <tspan class="g-cls-15" x="73.74" y="57.07"></tspan>
+                <tspan class="g-cls-4" x="80.58" y="57.07">V</tspan>
+                <tspan class="g-cls-16" x="115.76" y="57.07">ä</tspan>
+                <tspan class="g-cls-17" x="149.12" y="57.07">r</tspan>
+                <tspan class="g-cls-18" x="174.04" y="57.07">m</tspan>
+                <tspan class="g-cls-19" x="229.39" y="57.07">d</tspan>
+                <tspan x="264.64" y="57.07">ö</tspan>
+            </text>
+        </svg>
     </div>
     <ul class="header--language-menu">
         <li class="header--language-menu__item current">Svenska</li>
@@ -283,7 +319,45 @@
     <div class="footer--text"><p>Texter på webben ägs av den ideella föreningen Välkommen till Värmdö. Bildmaterial ägs
         av resp upphovsman. För kontakt, eposta till <a href="mailto:info@valkommentillvarmdo.se">info@valkommentillvarmdo.se</a>
     </p></div>
-    <div class="footer--logo"><img class="footer--logo_image" src="./img/VTVlogo_purple.svg"></div>
+    <div class="footer--logo">
+        <svg class="footer--logo_image" data-name="Lager 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 240.85 323.39">
+            <defs>
+                <style>.p-cls-1{fill:#ededed;}.p-cls-2,.p-cls-3{fill:#463ca0;}.p-cls-3{font-size:32.32px;font-family:OpenSans-Bold, Open
+                Sans;font-weight:700;}.p-cls-4{letter-spacing:-0.03em;}.p-cls-5{letter-spacing:-0.01em;}.p-cls-6{letter-spacing:-0.01em;}.p-cls-7{letter-spacing:-0.03em;}.p-cls-8{letter-spacing:-0.01em;}.p-cls-9{letter-spacing:-0.01em;}.p-cls-10{letter-spacing:-0.01em;}.p-cls-11{letter-spacing:0em;}.p-cls-12{letter-spacing:-0.01em;}.p-cls-13{letter-spacing:-0.01em;}.p-cls-14{letter-spacing:-0.01em;}.p-cls-15{letter-spacing:-0.14em;}.p-cls-16{letter-spacing:-0.03em;}.p-cls-17{letter-spacing:-0.01em;}.p-cls-18{letter-spacing:-0.01em;}.p-cls-19{letter-spacing:-0.01em;}.p-cls-20{letter-spacing:-0.01em;}
+                </style>
+            </defs>
+            <title>VTVlogo_purple</title>
+            <rect class="p-cls-1" width="240.85" height="316.93"/>
+            <path class="p-cls-2"
+                  d="M683.05,410.43h-.11a12.34,12.34,0,0,1-8.76-3.62h0c-2.9-2.89-34.92-37.14-42.44-46.25a8.13,8.13,0,1,1,12.55-10.35c6.21,7.53,30.54,33.66,38.7,42.3,8.16-8.64,32.49-34.76,38.7-42.3a8.13,8.13,0,0,1,12.55,10.35c-7.52,9.11-39.54,43.37-42.44,46.25h0A12.34,12.34,0,0,1,683.05,410.43Zm-.55,0h0Zm0,0h0Z"
+                  transform="translate(-562.57 -222.3)"/>
+            <path class="p-cls-2"
+                  d="M739,339.06a8.14,8.14,0,0,1-7.86-10.22,28.89,28.89,0,0,0-1.48-19.46,24.88,24.88,0,0,0-11-11.56c-9.91-5.18-22.68-4.09-30.36,2.57a8.11,8.11,0,0,1-5.33,2H683a8.11,8.11,0,0,1-5.33-2c-7.68-6.67-20.45-7.75-30.36-2.57a24.88,24.88,0,0,0-11,11.56,28.89,28.89,0,0,0-1.48,19.46A8.13,8.13,0,1,1,619.12,333a45,45,0,0,1,2.37-30.34,41.45,41.45,0,0,1,18.26-19.28c13.8-7.21,30.71-6.68,43.26.86,12.55-7.54,29.45-8.07,43.25-.87a41.45,41.45,0,0,1,18.26,19.28A45,45,0,0,1,746.88,333,8.13,8.13,0,0,1,739,339.06Zm-50.47-38.92,0,0Zm0,0h0Zm0,0h0Z"
+                  transform="translate(-562.57 -222.3)"/>
+            <text class="p-cls-3" transform="translate(36.58 258.88) scale(0.88 1)">
+                <tspan class="p-cls-4">V</tspan>
+                <tspan class="p-cls-5" x="20.18" y="0">ä</tspan>
+                <tspan class="p-cls-6" x="39.31" y="0">l</tspan>
+                <tspan class="p-cls-7" x="48.75" y="0">k</tspan>
+                <tspan class="p-cls-8" x="67.83" y="0">o</tspan>
+                <tspan class="p-cls-9" x="87.55" y="0">m</tspan>
+                <tspan class="p-cls-10" x="118.9" y="0">m</tspan>
+                <tspan class="p-cls-11" x="150.36" y="0">e</tspan>
+                <tspan x="169.33" y="0">n</tspan>
+                <tspan class="p-cls-12" x="9.44" y="32.32">t</tspan>
+                <tspan class="p-cls-13" x="23.12" y="32.32">i</tspan>
+                <tspan class="p-cls-14" x="32.57" y="32.32">l</tspan>
+                <tspan x="42.01" y="32.32">l</tspan>
+                <tspan class="p-cls-15" x="51.87" y="32.32"></tspan>
+                <tspan class="p-cls-16" x="55.75" y="32.32">V</tspan>
+                <tspan class="p-cls-17" x="75.93" y="32.32">ä</tspan>
+                <tspan class="p-cls-18" x="95.05" y="32.32">r</tspan>
+                <tspan class="p-cls-19" x="109.38" y="32.32">m</tspan>
+                <tspan class="p-cls-20" x="140.94" y="32.32">d</tspan>
+                <tspan x="161.12" y="32.32">ö</tspan>
+            </text>
+        </svg>
+    </div>
 </footer>
 </body>
 </html>
